--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^8.4.1",
+    "@react-native-firebase/auth": "^9.1.2",
+    "@react-native-firebase/firestore": "^7.7.0",
+    "@react-native-firebase/messaging": "^7.8.3",
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
     "axios": "^0.19.2",
