--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "axios": "^0.19.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-chart-kit": "^6.6.1",
     "react-native-elements": "^2.1.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5"
@@ -43,5 +45,10 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+	},
+	"rnpm": {
+		"assets": [
+			"./asssets/fonts"
+		]
+	}
 }
